--- a/server/package.json
+++ b/server/package.json
@@ -54,6 +54,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
+    "random-org": "^2.1.0",
     "serve-favicon": "^2.1.5",
     "serve-static": "^1.6.3",
     "winston": "^1.0.0",
